<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_back_second"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_shape"
            android:onClick="playGame"
            android:text="@string/play"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />
        <Button
            android:onClick="showRules"
            android:layout_margin="24dp"
            android:id="@+id/buttonOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_shape"
            android:text="@string/Rules"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/buttonRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/menu_button_shape"
            android:onClick="displayHigscoreList"
            android:text="@string/score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>